🐛 bug fix top level multiple ampersand selector

--- a/test/less/global.less
+++ b/test/less/global.less
@@ -4,3 +4,8 @@
 .c(@color) { color: @color; }
 .flex() { display: flex; }
 .items-center() { align-items: center; }
+.p(@v, @h) { padding: unit(@v, px) unit(@h, px); }
+.fs(@v) { font-size: unit(@v, px); }
+.bgc(@v) { background-color: @v; }
+.bold() { font-weight: bold; }
+.pointer() { cursor: pointer; }
